<resources>
    <string name="app_name">ConnectFour</string>
    <string name="connect_four">CONNECT FOUR</string>
    <string name="options">OPTIONS</string>
    <string name="gameOptions">Options</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
</resources>