<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fce803"
    tools:context=".GameOptionsFragment">

    <!-- options textview -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameOptions"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:layout_marginTop="32dp" />

    <!-- Container for difficulty Selection -->
    <LinearLayout
        android:id="@+id/difficulty_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp">

        <!-- select difficulty textview -->
        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_difficulty"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_gravity="center" />

        <!-- container for radiogroup -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp">

            <!-- radiogroup -->
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <!-- easy button  -->
                <RadioButton
                    android:id="@+id/radio_easy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:text="@string/easy"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:ignore="TouchTargetSizeCheck" /> <!-- Removes the circle -->

                <!-- medium option -->
                <RadioButton
                    android:id="@+id/radio_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:text="@string/medium"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:ignore="TouchTargetSizeCheck" /> <!-- Removes the circle -->

                <!-- hard option -->
                <RadioButton
                    android:id="@+id/radio_hard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:text="@string/hard"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:ignore="TouchTargetSizeCheck" /> <!-- Removes the circle -->

            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
